@@ -1,9 +1,18 @@
 console-setup (1.37) UNRELEASED; urgency=low
 
+  [ Otavio Salvador ]
   * Use 'dpkg --print-architecture' in debconf config script. Closes: #529574
+
+  [ Christian Perrier ]
+  * Add D-I localization sublevels markers.
 
   [ Debconf translations ]
   * Swedish. Closes: #529860
+
+  [ Anton Zinoviev ]
+  * ask_debconf function in the config script: do not ask the question
+    when there is only one available option.  Thanks to Christian Perrier,
+    closes: #529643.
 
  -- Otavio Salvador <otavio@ossystems.com.br>  Wed, 20 May 2009 09:02:48 -0300
 
